# phd_thesis_markdown

./: .gitignore  Gruntfile.js  Makefile  README.md  fabfile.py  figures  mhchem.yml  pyproject.toml
original/: Copy of Thesis.doc  Cover Marcel Hekking.doc  STELLING.DOC  Thesis.doc  Uitnodiging Marcel Hekking.doc
original/Correspondentie/: Brief + thesis aan A. Hasman.doc  Brief + thesis aan H.A. Bruining.doc  Brief Metselaar.doc  Brief aan Goldschmidt voor grote commissie.doc  Brief aan Jan Hek.doc  Eerste brief aan A. Hasman.doc  Eerste brief aan H.A. Bruining.doc  Eerste brief aan H.L. Vader.doc  Herma stickers voor Herman, Jan, en Edzard.doc  Nazending aan H.L. Vader.doc  Tweede brief aan A. Hasman.doc  Tweede brief aan H.A. Bruining.doc  Tweede brief aan H.L. Vader.doc  Vraag om akkoord A. Hasman.doc  Vraag om akkoord H.A. Bruining.doc  Vraag om akkoord H.L. Vader.doc  Vraag om akkoord commissieleden.doc
original/Fonts/: GDI_____.PFM  GDRG____.PFM  GDSBI___.PFM  GDSB____.PFM
original/H_00/: .~lock.H_00_text.txt#  H_00 copy.md  H_00.doc  H_00.docx  H_00.html  H_00.md  H_00_2.odt
original/H_01/: Copy of H_01.doc  H_01.doc  H_01.docx  H_01.html  UNCLASS.OPJ  UNCLASS.WMF  figures_H_01.docx  (+3 more)
output/: thesis.docx  thesis.fdb_latexmk  thesis.fls  thesis.html  thesis.tex
source/: 09_chapter_1.md  H_00.md  H_00_A_firstpage.md  H_00_B_acknowledgement.md  H_00_C_titlepage.md  H_00_D_committee.md  H_00_E_cartoon.md  H_00_F_toc.md  H_01.md  H_02.md  H_03.md  H_04.md  Makefile  figures
style/: preamble.tex  template.fdb_latexmk  template.fls  template.tex
(+108 files in other folders)
