[tool.poetry]
name = "phd_thesis_markdown"
version = "0.1.0"
description = "Marcel Hekking's PhD Thesis written in Markdown"
authors = ["Marcel Hekking <marcelhekking@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
fabric = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
